; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_query_decoder.c_pt_qry_core_bus_ratio.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_query_decoder.c_pt_qry_core_bus_ratio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_query_decoder = type { i32 }

@pte_invalid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pt_qry_core_bus_ratio(%struct.pt_query_decoder* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pt_query_decoder*, align 8
  %5 = alloca i32*, align 8
  store %struct.pt_query_decoder* %0, %struct.pt_query_decoder** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.pt_query_decoder*, %struct.pt_query_decoder** %4, align 8
  %7 = icmp ne %struct.pt_query_decoder* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %8, %2
  %12 = load i32, i32* @pte_invalid, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %19

14:                                               ; preds = %8
  %15 = load i32*, i32** %5, align 8
  %16 = load %struct.pt_query_decoder*, %struct.pt_query_decoder** %4, align 8
  %17 = getelementptr inbounds %struct.pt_query_decoder, %struct.pt_query_decoder* %16, i32 0, i32 0
  %18 = call i32 @pt_time_query_cbr(i32* %15, i32* %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %14, %11
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @pt_time_query_cbr(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
